--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">
-            <i class="fa fa-copyright" aria-hidden="true"></i> boardR 2017
+            <i class="fa fa-copyright" aria-hidden="true"></i> escapeR 2017
         </span>
     </div>
 </footer>
