--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
+
 body {
-    padding-top: 5rem;
-    margin-bottom: 60px;
+  padding-top: 5rem;
+  margin-bottom: 60px;
 }
+
 .starter-template {
-    padding: 3rem 1.5rem;
-    text-align: center;
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
