--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,8 @@ body {
   justify-content: center;
   text-align: center;
 }
+
+@font-face {
+  font-family: '24Font';
+  src: url('assets/fonts/Open 24 Display St.ttf') ;
+}
