--- a/src/app/component/mission1/mission1.component.html
+++ b/src/app/component/mission1/mission1.component.html
@@ -1,2 +1,2 @@
-<app-countdown [enableMilliseconds]="false"></app-countdown>
+<app-countdown-dark [enableMilliseconds]="false"></app-countdown-dark>
 <app-button></app-button>
