--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-  <a class="navbar-brand" href="#">escapeR</a>
+  <a class="navbar-brand" href="#">Bombastic</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <!--
