--- a/src/app/component/bomb/bomb.component.css
+++ b/src/app/component/bomb/bomb.component.css
@@ -2,7 +2,6 @@
   position: relative;
   z-index: 1030;
   margin-top: -5rem;
-  border: 5px solid grey;
   height: 100vh;
 }
 
@@ -12,4 +11,9 @@
 
 .top5 {
   margin-top: 5%;
+}
+
+.noScroll {
+  overflow: hidden;
+  position: fixed;
 }
