It's the final countdown!

--- a/src/app/component/bomb/bomb.component.html
+++ b/src/app/component/bomb/bomb.component.html
@@ -21,7 +21,8 @@
                  (outcome)="onOutcome($event)">
     </app-key-pad>
     <app-base4 class="col-3"
-               [value]="52">
+               [value]="52"
+               [missionId]="2">
     </app-base4>
     <app-wire class="col-6 center"
               [missionId]="3"
