--- a/src/app/component/start/start.component.html
+++ b/src/app/component/start/start.component.html
@@ -1,6 +1,55 @@
 <div class="container">
   <div class="starter-template">
-    <h1>Mission 1 - 01001001</h1>
-    <p class="lead">Log in door de code van jullie team in te vullen en vervolgens op start te klikken.</p>
+    <h1>Welkom</h1>
+    <p class="lead">Welkom op de Dark Raven ultra geheime web applicatie.</p>
+    Log in door de code van jullie team in te vullen en vervolgens op start te klikken.
+  </div>
+  <div class="starter-template" style="text-align: left">
+    <h1>Geschiedenis</h1>
+    <div class="row">
+      <div class="col-6">
+        Dark Raven werd opgericht in 1987 door Prof. Dr. ir. ing. Diederick Villan.
+        Het doel van deze ultra geheime organisatie was vooral gericht op spionage van het Russische grondgebied tijdens
+        de laatste jaren van de koude
+        oorlog.
+        Toen in 1991 de koude oorlog ten einde kwam, werd de missie van Dark Raven uitgebreid naar het welzijn van de
+        hele wereld.
+        D. Villan is helaas rond die tijd spoorloos verdwenen.
+      </div>
+    </div>
+  </div>
+  <div class="starter-template" style="text-align: left">
+    <h1>Mission Blue Planet</h1>
+    <div class="row">
+      <div class="col-6">
+        Vergeet mars. We leven vandaag en alleen vandaag telt, vooral op onze eigen planeet.
+        Waar ook ter wereld iets mis gaat, wij staan paraat.
+        <br>
+        <br>
+        Onze vier garanties:
+        <ol>
+          <li>Het betere <span class="bold">sluipwerk</span>.</li>
+          <li>Het betere <span class="bold">speurwerk</span>.</li>
+          <li><span class="bold">Cryptografie</span> kent voor ons geen geheimen.</li>
+          <li><span class="bold">Infiltratie</span> zit in ons bloed.</li>
+        </ol>
+      </div>
+
+      <div class="col-6">
+        <img src="assets/other/blue_planet.jpg" style="width: 100%; border: darkblue solid 4px">
+      </div>
+    </div>
+  </div>
+  <h1>Hulp nodig?</h1>
+  <div class="row">
+    <div class="col-6">
+      Heb je zelf hulp nodig?
+      Bel dan ons handige nood nummer:
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 emergency-number">
+      0118 999 881 999 119 7253
+    </div>
   </div>
 </div>
