--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">
-            <i class="fa fa-copyright" aria-hidden="true"></i> bombastic 2017 by Dr. Villan
+            <i class="fa fa-copyright" aria-hidden="true"></i> bombastic 1987-2017 by Dr. Villan
         </span>
     </div>
 </footer>
