--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -9,20 +9,15 @@
         -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2"
-             type="text"
+      <input #pin
+             class="form-control mr-sm-2"
+             type="password"
              placeholder="Pin Code">
       <button class="btn btn-success my-2 my-sm-0"
-              type="submit"
-              (click)="start($event)">Start
-      </button>
-      <!--
-      <button pButton
               type="button"
-              class="btn ui-button-success my-sm-0"
-              (click)="start($event)" label="Start">
+              (click)="start(pin.value)">
+        Start
       </button>
-              -->
     </form>
   </div>
 </nav>
