--- a/src/app/component/mission3/mission3.component.html
+++ b/src/app/component/mission3/mission3.component.html
@@ -8,7 +8,7 @@
     <div class="col-2"></div>
     <div class="col-8">
       <video #videoPlayer class="full">
-        <source src="../../../assets/video/test.mp4">
+        <source src="../../../assets/video/01189998819991197253.mp4">
         Browser not supported...
       </video>
     </div>
@@ -17,15 +17,17 @@
     <div class="col-6">
       <h1>Mission Briefing</h1>
       <p>
-        <i>Kamer 464 ook wel gekend als het droogkot</i> - Een geheimzinnige man met de initialen D.V. heeft hier
-        meermaals de nacht doorgebracht. Ongetwijfeld zal hij ook wat sporen hebben achtergelaten. Doorzoek de ruimte en
-        probeer te achterhalen wat dit individu van plan was. Elk spoor is belangrijk en kan ons helpen zijn of haar
-        kwaadaardige plan te saboteren.
+        <i>De bunker.</i> - Een geheime ruimte onder deze basis heeft zijn laatste geheimen nog niet prijs gegeven. Een
+        zekere D.V. heeft hier allerlei codes achtergelaten. We moeten zijn snode plannen dwarsbomen. We weten echter
+        niet wat hij of zij van plan is. Vertaal de codes en misschien kunnen we zo groter leed voorkomen.
       </p>
       <ul>
-        <li>Ga naar kamer 464 en probeer zoveel mogelijk sporen te vinden.</li>
-        <li>Verniel niets want dit zou wel eens een belangrijke hint kunnen zijn. Vermijd contaminatie van de crime
-          scene.
+        <li>Ga naar de bunker en probeer de codes op te lossen.</li>
+        <li>Verniel niets want dat zou wel eens booby traps kunnen activeren.</li>
+        <li>Verplaats alleen voorwerpen als je weet waarvoor je deze nodig hebt. Ook hier om valstrikken te vermijden.
+        </li>
+        <li>Omwille van stralingsgevaar mag iedereen maar één keer de bunker binnen gaan. Verlaat je de ruimte, dan mag
+          je hier niet meer in.
         </li>
         <li>Succesvol of niet, keer terug binnen de 15 minuten.</li>
       </ul>
