--- a/src/app/component/mission4/mission4.component.html
+++ b/src/app/component/mission4/mission4.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="starter-template">
     <h1>Missie Minotaur</h1>
-    <p class="lead paladin">Speuren. Infiltratie.</p>
+    <p class="lead paladin">Infiltratie.</p>
     <div class="fa fa-user-secret fa-4x"></div>
   </div>
   <div class="starter-template row">
     <div class="col-2"></div>
     <div class="col-8">
       <video #videoPlayer class="full">
-        <source src="../../../assets/video/test.mp4">
+        <source src="../../../assets/video/01189998819991197253.mp4">
         Browser not supported...
       </video>
     </div>
@@ -17,16 +17,18 @@
     <div class="col-6">
       <h1>Mission Briefing</h1>
       <p>
-        <i>Kamer 464 ook wel gekend als het droogkot</i> - Een geheimzinnige man met de initialen D.V. heeft hier
-        meermaals de nacht doorgebracht. Ongetwijfeld zal hij ook wat sporen hebben achtergelaten. Doorzoek de ruimte en
-        probeer te achterhalen wat dit individu van plan was. Elk spoor is belangrijk en kan ons helpen zijn of haar
-        kwaadaardige plan te saboteren.
+        Een laser grid? Camera's? Hier moet wel iets heel belangrijk worden opgeslagen. Zoek je weg met het team
+        doorheen het grid, maar pas wel op dat je de lasers niet raakt. Blijf ook uit het zicht van de camera's.
+        Misschien dat je deze voorzichtig moet wegdraaien om het pad vrij te maken?
+        Bij het raken van de lasers of het gezien worden door de camera's gaat een stil alarm af.
+        De bewakers komen dan in actie. Verlaat de ruimte dan zo vlug mogelijk of verstop je heel erg goed.
+        Bij detectie worden strafpunten aangerekend.
       </p>
       <ul>
-        <li>Ga naar kamer 464 en probeer zoveel mogelijk sporen te vinden.</li>
-        <li>Verniel niets want dit zou wel eens een belangrijke hint kunnen zijn. Vermijd contaminatie van de crime
-          scene.
-        </li>
+        <li>Vermijd contact met de lasers.</li>
+        <li>Blijf uit het zicht van de camera .</li>
+        <li>Iedereen mag maximaal één code zelf meenemen.</li>
+        <li>Iemand die de wacht houdt, is geen overbodige luxe.</li>
         <li>Succesvol of niet, keer terug binnen de 15 minuten.</li>
       </ul>
     </div>
