--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -8,15 +8,15 @@
         </li>
         -->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <form #form class="form-inline my-2 my-lg-0">
       <input #pin
              class="form-control mr-sm-2"
              type="password"
              placeholder="Pin Code"
-             (keydown)="keyDown(pin.value, $event)">
+             (keyup.enter)="start(pin.value, form)">
       <button class="btn btn-success my-2 my-sm-0"
               type="button"
-              (click)="start(pin.value)">
+              (click)="start(pin.value, form)">
         Start
       </button>
     </form>
