--- a/src/app/component/countdown-dark/countdown-dark.component.html
+++ b/src/app/component/countdown-dark/countdown-dark.component.html
@@ -1,7 +1,7 @@
 <!--https://codepen.io/garethdweaver/pen/eNpWBb-->
 <div class="duration counter-module dark" (click)="tick()">
   <div *ngIf="enableDays">{{duration?.days}}d</div>
-  <div *ngIf="enableDHours">{{duration?.hours | number:'2.0-0'}}:</div>
+  <div *ngIf="enableHours">{{duration?.hours | number:'2.0-0'}}:</div>
   <div>{{duration?.minutes | number:'2.0-0'}}</div>
   <div>:{{duration?.seconds | number:'2.0-0'}}</div>
   <div *ngIf="enableMilliseconds">.{{duration?.milliseconds | number:'3.0-0'}}</div>
