Trying to make it work

--- a/src/app/component/mission1/mission1.component.html
+++ b/src/app/component/mission1/mission1.component.html
@@ -19,12 +19,12 @@
       <p>
         Verdachte personen verschuilen zich op de heuvel naast de nucleaire test site. We weten nog niet veel over de
         vijand, maar hier werden duidelijk experimenten uitgevoerd. Besluip de locatie en probeer intel te verzamelen
-        over het vijandelijke wapen. Wordt je gezien door een verdachte, keer dan onmiddelijk terug naar basis en
+        over het vijandelijke wapen. Word je gezien door een verdachte, keer dan onmiddelijk terug naar basis en
         verwittig een lid van het core team.
       </p>
       <ul>
         <li>Besluip de heuvel zonder gezien te worden.</li>
-        <li>Wordt je gezien, keer dan onmiddelijk terug naar de basis.</li>
+        <li>Word je gezien, keer dan onmiddelijk terug naar de basis.</li>
         <li>Succesvol of niet, keer terug binnen de 15 minuten.</li>
       </ul>
     </div>
