--- a/src/app/component/start/start.component.html
+++ b/src/app/component/start/start.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <div class="starter-template">
+    <img src="assets/logo/logo.jpg" style="width: 30%">
+  </div>
+  <div class="starter-template">
     <h1>Welkom</h1>
     <p class="lead">Welkom op de Dark Raven ultra geheime web applicatie.</p>
     Log in door de code van jullie team in te vullen en vervolgens op start te klikken.
